force-app/main/default/objects/Account/fields/Activator_DeploymentStatusId__c.field-meta.xml
<CustomField>
    <fullName>Activator_DeploymentStatusId__c</fullName>
    <description>No associated lookup in Salesforce. Used to trace back to Activator DeploymentStatuses table.</description>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Deployment Status record associated with this Dealer</inlineHelpText>
    <label>Activator Deployment Status Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>