force-app/main/default/objects/Account/fields/ContactUsUrl__c.field-meta.xml
<CustomField>
    <fullName>ContactUsUrl__c</fullName>
    <label>Contact Us URL</label>
    <type>Url</type>
</CustomField>