force-app/main/default/objects/Account/fields/CustomDisclaimerText__c.field-meta.xml
<CustomField>
    <fullName>CustomDisclaimerText__c</fullName>
    <inlineHelpText>CustomDisclaimerText</inlineHelpText>
    <label>Custom Disclaimer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>