force-app/main/default/objects/Account/fields/DeploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>DeploymentStatus__c</fullName>
    <label>Deployment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>