force-app/main/default/objects/Account/fields/FacebookUrl__c.field-meta.xml
<CustomField>
    <fullName>FacebookUrl__c</fullName>
    <inlineHelpText>URL for Facebook page</inlineHelpText>
    <label>Facebook URL</label>
    <type>Url</type>
</CustomField>