force-app/main/default/objects/Account/fields/MarketingFriendlyFromFormatId__c.field-meta.xml
<CustomField>
    <fullName>MarketingFriendlyFromFormatId__c</fullName>
    <description>1=Sender Name at Client Name; 2=Client Name; 3=Sender Name</description>
    <label>Marketing Friendly From Format Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sender Name at Client Name</fullName>
            </value>
            <value>
                <fullName>Client Name</fullName>
            </value>
            <value>
                <fullName>Sender Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>