force-app/main/default/objects/Account/fields/NewInventoryUrl__c.field-meta.xml
<CustomField>
    <fullName>NewInventoryUrl__c</fullName>
    <label>New Inventory URL</label>
    <type>Url</type>
</CustomField>