force-app/main/default/objects/Account/fields/OttoMarketingBdcEmailSender__c.field-meta.xml
<CustomField>
    <fullName>OttoMarketingBdcEmailSender__c</fullName>
    <description>Email of which user is used as the From address</description>
    <label>Otto Marketing BDC Email Sender</label>
    <type>Email</type>
</CustomField>