force-app/main/default/objects/Account/fields/OttoMarketingSalesEmailSender__c.field-meta.xml
<CustomField>
    <fullName>OttoMarketingSalesEmailSender__c</fullName>
    <label>Otto Marketing Sales Email Sender</label>
    <type>Email</type>
</CustomField>