force-app/main/default/objects/Account/fields/OttoMarketingSalesMonthsPurchased__c.field-meta.xml
<CustomField>
    <fullName>OttoMarketingSalesMonthsPurchased__c</fullName>
    <inlineHelpText>Amount of time elapsed since deal date</inlineHelpText>
    <label>Otto Marketing Sales Months Purchased</label>
    <length>80</length>
    <type>Text</type>
</CustomField>