force-app/main/default/objects/Account/fields/PartsPhone__c.field-meta.xml
<CustomField>
    <fullName>PartsPhone__c</fullName>
    <inlineHelpText>Phone number of the Parts Desk at this dealer</inlineHelpText>
    <label>Parts Phone</label>
    <type>Phone</type>
</CustomField>