force-app/main/default/objects/Account/fields/PartsUrl__c.field-meta.xml
<CustomField>
    <fullName>PartsUrl__c</fullName>
    <inlineHelpText>URL for Parts Department</inlineHelpText>
    <label>Parts URL</label>
    <type>Url</type>
</CustomField>