force-app/main/default/objects/Account/fields/SalesPhone__c.field-meta.xml
<CustomField>
    <fullName>SalesPhone__c</fullName>
    <inlineHelpText>Phone number for the Sales Desk at the dealer</inlineHelpText>
    <label>Sales Phone</label>
    <type>Phone</type>
</CustomField>