force-app/main/default/objects/Account/fields/ServicePhone__c.field-meta.xml
<CustomField>
    <fullName>ServicePhone__c</fullName>
    <inlineHelpText>Phone number for the Service Desk at the dealer</inlineHelpText>
    <label>Service Phone</label>
    <type>Phone</type>
</CustomField>