force-app/main/default/objects/Account/fields/UsedInventoryUrl__c.field-meta.xml
<CustomField>
    <fullName>UsedInventoryUrl__c</fullName>
    <label>Used Inventory URL</label>
    <type>Url</type>
</CustomField>